# Cluny_the_AI_Agent

./: .cluny  .env.example  .gitignore  BUILD_CHECKLIST.md  README.md  pyproject.toml  run_cluny.sh  setup_venv.sh
cluny/: __init__.py  chunking.py  cli.py  config.py  documents.py  extract.py  ingest.py  library_db.py  ollama_client.py  store.py  url_rules.py  web_fetch.py
