[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cluny-agent"
version = "0.1.0"
description = "Cluny — local-first second brain (Ollama + vector store)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "chromadb>=0.5.0",
  "typer>=0.12.0",
  "python-dotenv>=1.0.0",
  "pypdf>=5.0.0",
]

[project.scripts]
cluny = "cluny.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cluny"]

[tool.hatch.build.targets.sdist]
include = ["cluny"]
